# TravelBlog

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  manage.py  pyproject.toml  t
.github/workflows/: main.yml
templates/: _base.html  home.html
tests/: base_test_views.py  factories.py  test_admin.py  test_post.py  test_tag.py  test_user.py
travel_blog/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
travel_blog/main/: admin.py  apps.py  filters.py  serializers.py  views.py
travel_blog/main/migrations/: 0001_initial.py  0002_post.py  0003_tag_post_tags.py  0004_alter_post_slug_alter_post_tags.py  0005_alter_post_created_at_alter_post_updated_at.py
travel_blog/main/models/: __init__.py  post.py  tag.py
