[tool.poetry]
name = "travel-blog"
version = "0.1.0"
description = ""
authors = ["rombaks"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^0.991"
pre-commit = "^2.20.0"

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
)
'''

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
